# hot-corner

./: .env.example  .gitignore  README.md
.github/workflows/: nightly-sync.yml
backend/: database.py  main.py  pyproject.toml  requirements.txt  sync.py
db/: schema.sql
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  wrangler.jsonc
frontend/src/: index.html  styles.css
frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend/src/app/components/header/: header.css  header.html  header.ts
frontend/src/app/components/search-bar/: search-bar.css  search-bar.html  search-bar.ts
frontend/src/app/core/services/: stats.service.ts
frontend/src/app/pages/home/: home.css  home.html  home.ts
frontend/src/app/pages/leaderboard/: leaderboard.css  leaderboard.html  leaderboard.ts
frontend/src/app/pages/player/: player.css  player.html  player.ts
frontend/src/app/pages/team/: team.css  team.html  team.ts
frontend/src/environments/: environment.prod.ts
