[tool.poetry]
name = "hot-corner"
version = "0.1.0"
description = "Hot Corner — MLB stretch analysis API"
authors = ["Orion McLain <orionmclain@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
requests = ">=2.31.0"
cachetools = ">=5.3.0"
psycopg2-binary = ">=2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
